syntax = "proto3";

package orders;

service OrdersService {}
